# workstation

./: .editorconfig  .gitmodules  Pipfile  README.md  ansible.cfg  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
attakei_workstation/: __init__.py  cli.py  cookiecutter.py  playbook.py
cookiecutters/: readme
cookiecutters/python-application/{{cookiecutter.project_slug}}/: README.rst
cookiecutters/python-fastapi/: cookiecutter.json
files/: .hyper.js  alacritty.yml  python-requirements.txt
files/astronvim-user/: init.lua
files/mise/: config.toml
files/nvim/: .editorconfig  init.lua
files/nvim/lua/: lsp.lua  (+3 more)
files/zsh/: archlinux.zsh  commands.zsh  docker.zsh  env.zsh  gcloud.zsh  keybinds.zsh  nvm.zsh  plugins.zsh  terraform.zsh  wsl.zsh  zinit-plugins.zsh  zplugin.zsh  zshenv.zsh  zshrc.sh  zshrc.zsh
playbook/: appimage.yml  desktop.yml  fonts.yml  packages.yml  pc.yml  shell.yml  shells.yml  terminal.yml
playbook/filter_plugins/: filter_by_dist.py  for_packages.py
playbook/lookup_plugins/: dirglob.py
playbook/roles/: requirements.yml
playbook/tasks/: hyper.yml  setup_packages.yml
playbook/templates/: qtile_config.py.j2  xinitrc.j2
playbook/vars/: Archlinux.yml  MacOSX.yml  packages.yml
playbooks/: containers.yml  devel.yml  packages.yml  pc.yml  shell.yml  terminal.yml
playbooks/roles/: .gitignore
playbooks/vars/: Archlinux.yml  packages.yml
scripts/: run-ansible
templates/: xinitrc.j2
templates/python-application/: cookiecutter.json
tests/: requirements.txt  yamllint.yml
tools/: setup-mise  setup-nvim  setup-zsh
(+49 files in other folders)
