[tool.poetry]
name = "attakei-workstation"
version = "2020.2.28"
description = ""
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.scripts]
ws = "attakei_workstation:run"

[tool.poetry.dependencies]
python = "^3.8 | ^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
yamllint = "^1.20.0"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
