[tool.poetry]
name = "ws"
version = "2020.2.28"
description = ""
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8 | ^3.7 | ^3.9 | ^3.10"
docker = "^4.2.1"
ansible = "^4.2.0"

[tool.poetry.dev-dependencies]
yamllint = "^1.20.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
