[project]
name = "workstation"
version = "0.1.0"
description = "Add a short description here"
dependencies = ["ansible==4.*", "docker==4.*"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
